--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 fastapi = "==0.115.3"
 pytest = "==8.3.0"
-"mysql.connector" = "*"
+pymongo = "==4.11.2"
 pandas = "*"
 
 [dev-packages]
